--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,142 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>SrlNew</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>SrlNew</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <!--Import Google Icon Font-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!-- <link
+      type="text/css"
+      rel="stylesheet"
+      href="src/css/materialize.min.css"
+      media="screen,projection"
+    />
+    <script type="text/javascript" src="src/js/materialize.min.js"></script> -->
+    <!-- Compiled and minified CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.js"></script>
+    <script type="text/javascript" src="js/custom.js"></script>
+    <script>
+      var TxtType = function (el, toRotate, period) {
+        this.toRotate = toRotate;
+        this.el = el;
+        this.loopNum = 0;
+        this.period = parseInt(period, 10) || 2000;
+        this.txt = "";
+        this.tick();
+        this.isDeleting = false;
+      };
+
+      TxtType.prototype.tick = function () {
+        var i = this.loopNum % this.toRotate.length;
+        var fullTxt = this.toRotate[i];
+
+        if (this.isDeleting) {
+          this.txt = fullTxt.substring(0, this.txt.length - 1);
+        } else {
+          this.txt = fullTxt.substring(0, this.txt.length + 1);
+        }
+
+        this.el.innerHTML = '<span class="wrap">' + this.txt + "</span>";
+
+        var that = this;
+        var delta = 120 - Math.random() * 100;
+
+        if (this.isDeleting) {
+          delta /= 2;
+        }
+
+        if (!this.isDeleting && this.txt === fullTxt) {
+          delta = this.period;
+          this.isDeleting = true;
+        } else if (this.isDeleting && this.txt === "") {
+          this.isDeleting = false;
+          this.loopNum++;
+          delta = 500;
+        }
+
+        setTimeout(function () {
+          that.tick();
+        }, delta);
+      };
+
+      window.onload = function () {
+        var elements = document.getElementsByClassName("typewrite");
+        for (var i = 0; i < elements.length; i++) {
+          var toRotate = elements[i].getAttribute("data-type");
+          var period = elements[i].getAttribute("data-period");
+          if (toRotate) {
+            new TxtType(elements[i], JSON.parse(toRotate), period);
+          }
+        }
+        // INJECT CSS
+        var css = document.createElement("style");
+        css.type = "text/css";
+        css.innerHTML = ".typewrite > .wrap { border-right: 1px solid #fff}";
+        document.body.appendChild(css);
+      };
+    </script>
+    <script>
+      $(document).ready(function () {
+        $("#contact-us").submit(function (e) {
+          e.preventDefault();
+          if ($("#full_name").val() && $("#email").val()) {
+            $("#contact-form")
+              .attr("disabled", "true")
+              .css("pointer-events", "none")
+              .find(".spinner")
+              .show();
+            $("#contact-form").find("span").text("Sending");
+            $("#contact-form").find("i").css("visibility", "hidden");
+            $.ajax({
+              url: "/StackRoute-API/api/Drupal/PostDataStackroute",
+              method: "GET",
+              headers: {
+                Token:
+                  "a4P4M9fF3pIgd4Vso3Iqaa3qDPRTcptquTV6eKODNtcS1bUe4+6QDQ==",
+                "Content-Type": "application/json",
+              },
+              data: {
+                Name: $("#full_name").val(),
+                EmailID: $("#email").val(),
+                PhoneNo: $("#number").val(),
+                CompanyName: $("#company").val(),
+                Query: $("#requirement").val(),
+                Category: "STACKROUTE-LAB",
+                PortalName: "B2B",
+                ApplicationName: "STACKROUTE-LAB",
+              },
+              dataType: "json",
+              success: function (res) {
+                $("#contact-form")
+                  .attr("disabled", "false")
+                  .css("pointer-events", "")
+                  .text("Send")
+                  .find(".spinner")
+                  .hide();
+                $("#contact-form").find("span").text("Send");
+                $("#contact-form").find("i").css("visibility", "visible");
+                window.location = "thankyou.html";
+              },
+            });
+          }
+        });
+      });
+    </script>
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
