removed tnc, social media icons,copyright year,tel-no

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       type="text/css"
       rel="stylesheet"
       href="src/css/materialize.min.css"
       media="screen,projection"
-    />
+    /> -->
     <!-- <script type="text/javascript" src="src/js/materialize.min.js"></script> -->
     <!-- Compiled and minified CSS -->
     <link
@@ -27,7 +27,7 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.js"></script>
-    <script type="text/javascript" src="src/js/custom.js"></script>
+    <!-- <script type="text/javascript" src="src/js/custom.js"></script> -->
 
     <script>
       $(document).ready(function () {
