--- a/src/index.html
+++ b/src/index.html
@@ -2,21 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>SrlNew</title>
+    <title>Stackroute Labs</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="http://www.labs.stackroute.io/images/New-Logo.png" />
     <!--Import Google Icon Font-->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <!-- <link
-      type="text/css"
-      rel="stylesheet"
-      href="src/css/materialize.min.css"
-      media="screen,projection"
-    /> -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <!-- <script type="text/javascript" src="src/js/materialize.min.js"></script> -->
     <!-- Compiled and minified CSS -->
     <link
@@ -24,267 +15,219 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
 
+    <!-- <link rel="stylesheet" href="/src/css/style.css"/> -->
     <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.js"></script>
-    <!-- <script type="text/javascript" src="src/js/custom.js"></script> -->
-
-    <script>
-      $(document).ready(function () {
-        $("#contact-us").submit(function (e) {
-          e.preventDefault();
-          if ($("#full_name").val() && $("#email").val()) {
-            $("#contact-form")
-              .attr("disabled", "true")
-              .css("pointer-events", "none")
-              .find(".spinner")
-              .show();
-            $("#contact-form").find("span").text("Sending");
-            $("#contact-form").find("i").css("visibility", "hidden");
-            $.ajax({
-              url: "/StackRoute-API/api/Drupal/PostDataStackroute",
-              method: "GET",
-              headers: {
-                Token:
-                  "a4P4M9fF3pIgd4Vso3Iqaa3qDPRTcptquTV6eKODNtcS1bUe4+6QDQ==",
-                "Content-Type": "application/json",
-              },
-              data: {
-                Name: $("#full_name").val(),
-                EmailID: $("#email").val(),
-                PhoneNo: $("#number").val(),
-                CompanyName: $("#company").val(),
-                Query: $("#requirement").val(),
-                Category: "STACKROUTE-LAB",
-                PortalName: "B2B",
-                ApplicationName: "STACKROUTE-LAB",
-              },
-              dataType: "json",
-              success: function (res) {
-                $("#contact-form")
-                  .attr("disabled", "false")
-                  .css("pointer-events", "")
-                  .text("Send")
-                  .find(".spinner")
-                  .hide();
-                $("#contact-form").find("span").text("Send");
-                $("#contact-form").find("i").css("visibility", "visible");
-                window.location = "thankyou.html";
-              },
-            });
-          }
-        });
-      });
-      // Initialization of material Components
-
-      var el = document.getElementById("visionTab");
-      var workTab = document.getElementById("ourWorkTab");
-      var conatctTab = document.getElementById("contact-us-tabs");
-
-      var instance = M.Tabs.init(el);
-      var instance_work = M.Tabs.init(workTab);
-      var instance_contact = M.Tabs.init(conatctTab);
-
-      document.addEventListener("DOMContentLoaded", function () {
-        var elems = document.querySelectorAll(".sidenav");
-        var instances_sidenav = M.Sidenav.init(elems);
-      });
-
-      //Svgs movements
-      $(document).on("click mousemove", ".our-work", function (e) {
-        var x = e.clientX;
-        var y = e.clientY;
-        var newposX = x - 60;
-        var newposY = y - 600;
-        var newposX = newposX / 20;
-        var newposY = newposY / 20;
-        $(".icon-ani").css(
-          "transform",
-          "translate3d(" + newposX + "px," + newposY + "px,0px)"
-        );
-      });
-
-      $("#next-btn").click(function () {
-        instance.select("OurMission");
-      });
-      $("#prev-btn").click(function () {
-        instance.select("OurVision");
-      });
-
-      $(".circle-border").each(function () {
-        $(this).html(
-          '<span class="icon">' +
-            $(this).html() +
-            '</span><span class="circle"><span><em></em></span><span><em></em></span></span>'
-        );
-      });
-
-      $(window).scroll(function () {
-        var sTop = $(window).scrollTop();
-        var ww = $(window).width();
-        if (ww < 767) {
-          if (sTop > 100) {
-            $("header.mobile .logo").hide();
-            $("header.mobile .menu-icon").show();
-          } else {
-            $("header.mobile .logo").show();
-            $("header.mobile .menu-icon").hide();
-          }
-        }
-      });
-
-      // $(document).on('click', 'a[href^="#"].scroll', function (event) {
-      //     event.preventDefault();
-
-      //     $('html, body').animate({
-      //         scrollTop: $($.attr(this, 'href')).offset().top
-      //     }, 500);
-      // });
-      document
-        .querySelectorAll('a[href^="#"].scroll-smooth')
-        .forEach((anchor) => {
-          anchor.addEventListener("click", function (e) {
-            e.preventDefault();
-
-            document.querySelector(this.getAttribute("href")).scrollIntoView({
-              behavior: "smooth",
-            });
-          });
-        });
-
-      $("#contact").click(function (e) {
-        e.preventDefault();
-
-        var name = $("#full_name").val();
-        var email = $("#email").val();
-        var mobile = $("#number").val();
-
-        var regNum = /(7|8|9)\d{9}/;
-        var regEmail = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
-
-        if (name == "") {
-          $("#full_name").addClass("invalid");
-        }
-        if (email == "") {
-          $("#email").addClass("invalid");
-          $("#email").next().next().text("*Required");
-        }
-        if (mobile == "") {
-          $("#number").addClass("invalid");
-          $("#number").next().next().text("*Required");
-        } else if (regNum.test(mobile) == false) {
-          $("#number").addClass("invalid");
-          $("#number").next().next().text("*Invalid phone number");
-        }
-      });
-
-      $("#join-us").click(function (e) {
-        e.preventDefault();
-
-        var name = $("#j_full_name").val();
-        var email = $("#j_email").val();
-        var mobile = $("#j_number").val();
-        var desg = $("#j_Designation").val();
-
-        var regNum = /(7|8|9)\d{9}/;
-        var regEmail = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
-
-        if (name == "") {
-          $("#j_full_name").addClass("invalid");
-        }
-        if (email == "") {
-          $("#j_email").addClass("invalid");
-          $("#j_email").next().next().text("*Required");
-        }
-        if (mobile == "") {
-          $("#j_number").addClass("invalid");
-          $("#j_number").next().next().text("*Required");
-        } else if (regNum.test(mobile) == false) {
-          $("#j_number").addClass("invalid");
-          $("#j_number").next().next().text("*Invalid phone number");
-        }
-        if (desg == "") {
-          $("#j_Designation").addClass("invalid");
-        }
-      });
-
-      $(window).scroll(function () {
-        var scrollPos = $(window).scrollTop();
-        var sections = $(".section");
-
-        for (let i = 0; i < sections.length; i++) {
-          var secPos = $(sections[i]).position().top;
-          var secnextPos = $(sections[i]).position().top;
-
-          if (scrollPos >= secPos) {
-            var secId = $(sections[i + 1]).attr("id");
-            $("#scrollbtn").attr("href", "#" + secId);
-          }
-        }
-      });
-    </script>
-  </head>
-  <body>
-    <script>
-      var TxtType = function (el, toRotate, period) {
-        this.toRotate = toRotate;
-        this.el = el;
-        this.loopNum = 0;
-        this.period = parseInt(period, 10) || 2000;
-        this.txt = "";
-        this.tick();
-        this.isDeleting = false;
-      };
-
-      TxtType.prototype.tick = function () {
-        var i = this.loopNum % this.toRotate.length;
-        var fullTxt = this.toRotate[i];
-
-        if (this.isDeleting) {
-          this.txt = fullTxt.substring(0, this.txt.length - 1);
-        } else {
-          this.txt = fullTxt.substring(0, this.txt.length + 1);
-        }
-
-        this.el.innerHTML = '<span class="wrap">' + this.txt + "</span>";
-
-        var that = this;
-        var delta = 120 - Math.random() * 100;
-
-        if (this.isDeleting) {
-          delta /= 2;
-        }
-
-        if (!this.isDeleting && this.txt === fullTxt) {
-          delta = this.period;
-          this.isDeleting = true;
-        } else if (this.isDeleting && this.txt === "") {
-          this.isDeleting = false;
-          this.loopNum++;
-          delta = 500;
-        }
-
-        setTimeout(function () {
-          that.tick();
-        }, delta);
-      };
-
-      window.onload = function () {
-        var elements = document.getElementsByClassName("typewrite");
-        for (var i = 0; i < elements.length; i++) {
-          var toRotate = elements[i].getAttribute("data-type");
-          var period = elements[i].getAttribute("data-period");
-          if (toRotate) {
-            new TxtType(elements[i], JSON.parse(toRotate), period);
-          }
-        }
-        // INJECT CSS
-        var css = document.createElement("style");
-        css.type = "text/css";
-        css.innerHTML = ".typewrite > .wrap { border-right: 1px solid #fff}";
-        document.body.appendChild(css);
-      };
-    </script>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+  <body class="mat-typography">
     <app-root></app-root>
   </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.js"></script>
+  <script>
+		var TxtType = function(el, toRotate, period) {
+			this.toRotate = toRotate;
+			this.el = el;
+			this.loopNum = 0;
+			this.period = parseInt(period, 10) || 2000;
+			this.txt = '';
+			this.tick();
+			this.isDeleting = false;
+		};
+
+		TxtType.prototype.tick = function() {
+			var i = this.loopNum % this.toRotate.length;
+			var fullTxt = this.toRotate[i];
+
+			if (this.isDeleting) {
+			this.txt = fullTxt.substring(0, this.txt.length - 1);
+			} else {
+			this.txt = fullTxt.substring(0, this.txt.length + 1);
+			}
+
+			this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+
+			var that = this;
+			var delta = 120 - Math.random() * 100;
+
+			if (this.isDeleting) { delta /= 2; }
+
+			if (!this.isDeleting && this.txt === fullTxt) {
+			delta = this.period;
+			this.isDeleting = true;
+			} else if (this.isDeleting && this.txt === '') {
+			this.isDeleting = false;
+			this.loopNum++;
+			delta = 500;
+			}
+
+			setTimeout(function() {
+			that.tick();
+			}, delta);
+		};
+
+		window.onload = function() {
+			var elements = document.getElementsByClassName('typewrite');
+			for (var i=0; i<elements.length; i++) {
+				var toRotate = elements[i].getAttribute('data-type');
+				var period = elements[i].getAttribute('data-period');
+				if (toRotate) {
+				  new TxtType(elements[i], JSON.parse(toRotate), period);
+				}
+			}
+			// INJECT CSS
+			var css = document.createElement("style");
+			css.type = "text/css";
+			css.innerHTML = ".typewrite > .wrap { border-right: 1px solid #fff}";
+			document.body.appendChild(css);
+		};
+	</script>
+  <script>
+    // Initialization of material Components
+
+var el = document.getElementById('visionTab');
+var workTab = document.getElementById('ourWorkTab');
+var conatctTab = document.getElementById('contact-us-tabs');
+
+var instance = M.Tabs.init(el);
+var instance_work = M.Tabs.init(workTab);
+var instance_contact = M.Tabs.init(conatctTab);
+
+document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.sidenav');
+    var instances_sidenav = M.Sidenav.init(elems);
+});
+
+//Svgs movements
+$(document).on("click mousemove",".our-work",function(e){ 
+    var x = e.clientX;
+    var y = e.clientY;
+    var newposX = x - 60;
+    var newposY = y - 600; 
+    var newposX =  newposX/20;
+    var newposY = newposY/20; 
+    $(".icon-ani").css("transform","translate3d("+newposX+"px,"+newposY+"px,0px)");
+});
+
+$("#next-btn").click(function() {
+    instance.select('OurMission');
+});
+$("#prev-btn").click(function() {
+    instance.select('OurVision');
+});
+
+$('.circle-border').each(function(){
+    $(this).html('<span class="icon">'+ $(this).html() +'</span><span class="circle"><span><em></em></span><span><em></em></span></span>');
+});
+
+$(window).scroll(function(){
+    var sTop = $(window).scrollTop();
+    var ww = $(window).width();
+    if (ww < 767) {
+        if(sTop > 100) {
+            $('header.mobile .logo').hide();
+            $('header.mobile .menu-icon').show();
+        } else {
+            $('header.mobile .logo').show();
+            $('header.mobile .menu-icon').hide();
+        }
+    }
+});
+
+
+// $(document).on('click', 'a[href^="#"].scroll', function (event) {
+//     event.preventDefault();
+
+//     $('html, body').animate({
+//         scrollTop: $($.attr(this, 'href')).offset().top
+//     }, 500);
+// });
+document.querySelectorAll('a[href^="#"].scroll-smooth').forEach(anchor => {
+    anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+
+        document.querySelector(this.getAttribute('href')).scrollIntoView({
+            behavior: 'smooth'
+        });
+    });
+});
+
+$('#contact').click(function (e) {
+	e.preventDefault();
+	
+	var name = $('#full_name').val();
+	var email = $('#email').val();
+	var mobile = $('#number').val();
+	
+	var regNum = /(7|8|9)\d{9}/;
+	var regEmail = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+	
+	if(name == "") {
+		$('#full_name').addClass('invalid');
+	}
+	if(email == "") {
+		$('#email').addClass('invalid');
+		$('#email').next().next().text('*Required');
+	}
+	if(mobile == "") {
+		$('#number').addClass('invalid');
+		$('#number').next().next().text('*Required');
+	} else if ( regNum.test(mobile) == false) {
+		$('#number').addClass('invalid');
+		$('#number').next().next().text('*Invalid phone number');
+	}
+	
+});
+
+$('#join-us').click(function (e) {
+	e.preventDefault();
+	
+	var name = $('#j_full_name').val();
+	var email = $('#j_email').val();
+	var mobile = $('#j_number').val();
+	var desg = $('#j_Designation').val();
+	
+	var regNum = /(7|8|9)\d{9}/;
+	var regEmail = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+	
+	if(name == "") {
+		$('#j_full_name').addClass('invalid');
+	}
+	if(email == "") {
+		$('#j_email').addClass('invalid');
+		$('#j_email').next().next().text('*Required');
+	}
+	if(mobile == "") {
+		$('#j_number').addClass('invalid');
+		$('#j_number').next().next().text('*Required');
+	} else if ( regNum.test(mobile) == false) {
+		$('#j_number').addClass('invalid');
+		$('#j_number').next().next().text('*Invalid phone number');
+	}
+	if(desg == "") {
+		$('#j_Designation').addClass('invalid');
+	}
+	
+});
+
+$(window).scroll(function(){
+	var scrollPos = $(window).scrollTop();
+	var sections = $('.section');
+	
+	for (let i = 0; i<sections.length; i++){
+		
+		var secPos = $(sections[i]).position().top;
+		var secnextPos = $(sections[i]).position().top;
+		
+		if ( scrollPos >= secPos ) {
+			var secId =  $(sections[i + 1]).attr('id');
+			$('#scrollbtn').attr('href', '#' + secId );
+		} 
+		
+		
+	}
+})
+  </script>
 </html>
