--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Stackroute Labs</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="http://www.labs.stackroute.io/images/New-Logo.png" />
+    <link rel="icon" type="image/x-icon" href="assets/images/New-Logo.png" />
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <!-- <script type="text/javascript" src="src/js/materialize.min.js"></script> -->
